--- a/manifest.json
+++ b/manifest.json
@@ -7,5 +7,6 @@
          
         "default_popup": "popup.html"
     },
-    "permissions": ["activeTab", "downloads"]
+    "permissions": ["activeTab", "downloads"],
+    "content_security_policy": "script-src 'self' https://cdnjs.cloudflare.com; object-src 'self'"
 }
